--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "material-ui-vue": "^0.1.4",
     "vue": "^2.1.10",
     "vue-router": "^2.2.0"
   },
